Adding blog editing and add features
